# twisted-egg-machine

./: .gitignore  Anchor.toml  LICENSE-MIT  README.md  parse.py
programs/twister-machine/: Cargo.toml
programs/twister-machine/src/: accounts_info.rs  error.rs  event.rs  lib.rs  state.rs  utils.rs
programs/twister-machine/src/accounts_info/: activated_twister_machine.rs  add_award.rs  add_fragment.rs  airdrop_fragment.rs  airdrop_special_fragment.rs  create_general_account.rs  create_special_account.rs  initialize_twister_machine.rs  lottery.rs  simple_lottery.rs  update_award.rs  withdraw.rs
programs/twister-machine/src/state/: twister_machine.rs  user_general_account.rs  user_special_account.rs
tests/: twister-machine.ts
