[package]
name = "twister-machine"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "twister_machine"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
dev = []

[dependencies]
anchor-lang = "0.22.1"
anchor-spl = "0.22.1"
borsh = { version = "0.9.3", features = ["const-generics"] }
rand = { version = "0.8.5", default-features = false }
rand_chacha = "0.3.1"
solana-program = "1.10.3"
solana-security-txt = "0.1.5"
spl-token = "3.3.0"

[dev-dependencies]
type-layout = "0.2.0"
